--- a/app/src/views/home/login.ejs
+++ b/app/src/views/home/login.ejs
@@ -4,12 +4,20 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/css/home/login.css">
   <script src="/js/home/login.js" defer></script>
   <title>Document</title>
 </head>
 <body>
-  <input id="id" type="text" placeholder="id"><br>
-  <input id="password" type="text" placeholder="password"><br>
-  <button>login</button>
+  <div class="login-page">
+    <div class="form">
+      <form class="login-form">
+        <input id="id" type="text" placeholder="id"/>
+        <input id="password" type="password" placeholder="password"/>
+        <button>login</button>
+        <p class="message">Not registered? <a href="/register">Create an account</a></p>
+      </form>
+    </div>
+  </div>
 </body>
 </html>
